# bnft

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: bnft.rs  demo.rs  id.rs  identity.rs  lib.rs  token.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
