[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['bnft-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'bnft-runtime-wasm'
version = '1.0.0'
[dependencies.bnft-runtime]
default-features = false
path = '..'
